--- a/config/models/lightgbm.yaml
+++ b/config/models/lightgbm.yaml
@@ -1,5 +1,5 @@
 params:
-  objective: tweedie
+  objective: regression_l1
   learning_rate: 0.02
   num_leaves: 100
   min_data_in_leaf: 100
@@ -12,8 +12,7 @@ params:
   n_jobs: -1
 path: resources/models/
 name: lightgbm
-results: cross-validation-median-lightgbm
+results: 5fold-kfold-lightgbm
 early_stopping_rounds: 100
 num_boost_round: 10000
-verbose_eval: 250
-alpha: 1
+verbose_eval: 100
