--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,8 +1,8 @@
 defaults:
   - _self_
   - data: dataset
-  - features: features
   - models: lightgbm
+  - store: features
   - hydra: custom
   - override hydra/hydra_logging: disabled
   - override hydra/job_logging: disabled
