--- a/config/models/catboost.yaml
+++ b/config/models/catboost.yaml
@@ -1,7 +1,7 @@
 params:
   task_type: CPU
-  loss_function: RMSE
-  eval_metric: SMAPE
+  loss_function: MAE
+  eval_metric: MAE
   learning_rate: 0.02
   l2_leaf_reg: 0.3
   bagging_temperature: 1
@@ -13,7 +13,7 @@ params:
   allow_writing_files: False
 path: resources/models/
 name: catboost
-results: cross-validation-median-catboost
+results: 5fold-kfold-median-catboost
 early_stopping_rounds: 100
 seed: 42
 verbose_eval: 500
