--- a/config/models/xgboost.yaml
+++ b/config/models/xgboost.yaml
@@ -1,15 +1,16 @@
 params:
+  objective: reg:pseudohubererror
+  eval_metric: mae
   eta: 0.02
   subsample: 0.8
   colsample_bytree: 0.8
   alpha: 0.01
   lambda: 0.01
   seed: 42
-  objective: reg:squarederror
   n_jobs: -1
 path: resources/models/
 name: xgboost
-results: cross-validation-median-xgboost
+results: 5fold-kfold-median-xgboost
 early_stopping_rounds: 100
 num_boost_round: 10000
 verbose_eval: 500
