--- a/config/store/features.yaml
+++ b/config/store/features.yaml
@@ -2,30 +2,27 @@ drop_features:
 - ATA
 - SAMPLE_ID
 categorical_features:
+- SHIP_TYPE_CATEGORY
 - ARI_CO
 - ARI_PO
-- SHIP_TYPE_CATEGORY
+- FLAG
 selected_features:
 - DIST
-- PORT_SIZE
-- ARI_CO_count
-- weekday
-- month
-- SHIP_TYPE_CATEGORY
 - BDI_ADJ
-- year
-- DUBAI
-- ARI_CO
+- month
+- PORT_SIZE
 - BRENT
+- weekday
 - WTI
-- year_min
+- year
+- SHIP_TYPE_CATEGORY
+- ARI_CO
+- DUBAI
+- DEADWEIGHT
+- BUILT
+- day
 - ARI_PO
-- year_std
+- LENGTH
+- GT
 - AIR_TEMPERATURE
-- DIST_diff1
-- DEADWEIGHT_max
-- PORT_SIZE_min
-- DUBAI_std
-- weekday_mean
-- DEADWEIGHT_min
-- BUILT_max
+- FLAG
