--- a/config/store/features.yaml
+++ b/config/store/features.yaml
@@ -12,16 +12,20 @@ categorical_features:
 selected_features:
 - DIST
 - PORT_SIZE
+- DIST_RATIO2
 - weekday
 - SHIP_TYPE_CATEGORY
 - ARI_CO
-- DEADWEIGHT
+- DIST_RATIO
+- DIST_dev
+- DIST_RATIO4
 - year
+- DEADWEIGHT
 - BUILT
 - ARI_PO
-- DIST_diff1
-- LENGTH
 - GT
-- FLAG
-- month
+- LENGTH
 - BN
+- DIST_RATIO3
+- FLAG
+- BREADTH
