--- a/config/models/lightgbm.yaml
+++ b/config/models/lightgbm.yaml
@@ -1,20 +1,20 @@
 params:
   boosting_type: gbdt
-  objective: tweedie
-  learning_rate: 0.1
+  objective: huber
+  metric: mae
+  learning_rate: 0.3
   num_leaves: 16
   min_data_in_leaf: 100
   bagging_fraction: 0.8
   feature_fraction: 0.8
   lambda_l1: 0.1
   lambda_l2: 0.1
-  metric: mae
   seed: 42
   verbose: -1
   n_jobs: -1
 path: resources/models/
 name: lightgbm
-results: 5fold-tweedie-lightgbm
+results: 5fold-huber-lightgbm
 early_stopping_rounds: 100
 num_boost_round: 30000
 verbose_eval: 1000
