--- a/config/models/xgboost.yaml
+++ b/config/models/xgboost.yaml
@@ -1,7 +1,8 @@
 params:
-  objective: reg:pseudohubererror
+  objective: reg:absoluteerror
+  tree_method: gpu_hist
   eval_metric: mae
-  eta: 0.02
+  eta: 0.05
   subsample: 0.8
   colsample_bytree: 0.8
   alpha: 0.01
@@ -10,9 +11,7 @@ params:
   n_jobs: -1
 path: resources/models/
 name: xgboost
-results: 5fold-kfold-median-xgboost
+results: 5fold-median-xgboost
 early_stopping_rounds: 100
 num_boost_round: 10000
-verbose_eval: 500
-alpha: 1
-is_custom_loss: True
+verbose_eval: 1000
