--- a/config/models/xgboost.yaml
+++ b/config/models/xgboost.yaml
@@ -1,8 +1,7 @@
 params:
   objective: reg:absoluteerror
-  tree_method: gpu_hist
   eval_metric: mae
-  eta: 0.05
+  eta: 0.1
   subsample: 0.8
   colsample_bytree: 0.8
   alpha: 0.01
@@ -11,7 +10,7 @@ params:
   n_jobs: -1
 path: resources/models/
 name: xgboost
-results: 5fold-median-xgboost
+results: 5fold-huber-xgboost
 early_stopping_rounds: 100
 num_boost_round: 10000
 verbose_eval: 1000
