--- a/config/ensemble.yaml
+++ b/config/ensemble.yaml
@@ -14,7 +14,5 @@ output:
   submit: sample_submission.csv
 
 median_preds:
-  - 5fold-mae-catboost.csv
+  - test_submission_43.93.csv
   - 5fold-mae-lightgbm.csv
-  - 5fold-tweedie-lightgbm.csv
-  - 5fold-regression-tabnet.csv
