--- a/config/models/lightgbm.yaml
+++ b/config/models/lightgbm.yaml
@@ -2,19 +2,20 @@ params:
   boosting_type: gbdt
   objective: mae
   metric: mae
-  learning_rate: 0.1
-  num_leaves: 16
+  learning_rate: 0.05
+  num_leaves: 32
+  max_depth: -1
   min_data_in_leaf: 100
   bagging_fraction: 0.8
   feature_fraction: 0.8
-  lambda_l1: 0.1
-  lambda_l2: 0.1
-  seed: 42
+  lambda_l1: 0.001
+  lambda_l2: 0.001
+  seed: 1359
   verbose: -1
   n_jobs: -1
 path: resources/models/
 name: lightgbm
-results: 5fold-mae-lightgbm
+results: 5fold-mae-lightgbm-1359
 early_stopping_rounds: 100
 num_boost_round: 30000
 verbose_eval: 1000
