--- a/config/models/xgboost.yaml
+++ b/config/models/xgboost.yaml
@@ -10,7 +10,7 @@ params:
   n_jobs: -1
 path: resources/models/
 name: xgboost
-results: 5fold-huber-xgboost
+results: 5fold-mae-xgboost
 early_stopping_rounds: 100
 num_boost_round: 10000
 verbose_eval: 1000
